--- a/src/app/dashboard/dashboard.html
+++ b/src/app/dashboard/dashboard.html
@@ -31,7 +31,9 @@
       <button mat-icon-button (click)="sidenav.toggle()" class="menu-button">
         <mat-icon>menu</mat-icon>
       </button>
-      <span>Accueil</span>
+      <a routerLink="/accueil" routerLinkActive="router-link-active" mat-button>
+        <span mat-buton>Acueil</span>
+      </a>
       <span class="toolbar-spacer"></span>
       <button mat-icon-button [matMenuTriggerFor]="profileMenu">
   <mat-icon>person</mat-icon>
